// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

02/17/2010
	r201 [pakpil]
	* Minor fixed in WM_SEVERE_RAINSTORM skill.c
	* Reverted casting reduction on Bolts.

02/17/2010
	r200 [pakpil]
	* Fixed fame ranking.
	* Fixed SC_FREEZING and SC_BURNING that were stacking. We still need more info about it.

02/17/2010
	r197 [pakpil]
	* Fixed SC_REPRODUCE. Bug report 165.
	* Fixed some issues in r196 that make conflicts with cygwin.

02/16/2010
	r196 [pakpil]
	* Added some Wanderer/Minstrel skills: WM_VOICEOFSIREN, WM_DEADHILLHERE, WM_SIRCLEOFNATURE, WM_GREAT_ECHO,
		WM_SONG_OF_MANA, WM_DANCE_WITH_WUG, WM_SOUND_OF_DESTRUCTION, WM_SATURDAY_NIGHT_FEVER,
		WM_LERADS_DEW, WM_MELODYOFSINK, WM_BEYOND_OF_WARCRY, WM_UNLIMITED_HUMMING_VOICE.
	* Reverted clean up on some defines in pc_gainexp. Take care with these, if you remove it the exp gained will be
	  shown twice when "display_exp" is "yes". This option should be changed or removed.

02/15/2010
	r195 [Jobbie]
	* Sorcerer Skills Update.
		- Striking now will drain sp during its duration and uses Endow skill as its bonus ATK.
		- Fixed the duration and re-use delay of Warmer.
		- Warmer should affect all not only allies.
		- Updated certain skills to its proper damage calculation as of the present info.
	* Earth Strain Update.
		- Adjusted its stripping rate to official and its stripping behavior.
		- Adjusted its area of effect as of official info.
	* Added RETURN_TO_ELDICASTES skill.
	* Fixed burning status which makes you paralyze during its duration.
	* Earth Grave and Arrow Storm should affect hidden targets.
	* Fixed when mounted and equipped with weapon a client error appears.

02/14/2010
	r194 [Jobbie]
	* Fixed the success chance of auto casting Spear Boomerang when using Hundred Spear.

	r193 [Jobbie]
	* Added the missing configuration for renewal cast setting and camouflage setting in skill.conf.
	* Fixed some mechanic items.